--- a/Paas_Ta_Front/paas/package.json
+++ b/Paas_Ta_Front/paas/package.json
@@ -21,6 +21,7 @@
     "react-final-form": "^6.5.3",
     "react-loading": "^2.0.3",
     "react-redux": "^7.2.5",
+    "react-remove-scroll-bar": "^2.2.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-toastify": "^8.0.3",
