--- a/Paas_Ta_Front/paas/package.json
+++ b/Paas_Ta_Front/paas/package.json
@@ -13,8 +13,10 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "express": "^4.17.1",
     "final-form": "^4.20.2",
     "markdown-to-jsx": "^7.1.3",
+    "mysql": "^2.18.1",
     "react": "^17.0.2",
     "react-device-detect": "^2.0.0",
     "react-dom": "^17.0.2",
