--- a/Paas_Ta_Front/paas/package.json
+++ b/Paas_Ta_Front/paas/package.json
@@ -13,6 +13,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.22.0",
     "express": "^4.17.1",
     "final-form": "^4.20.2",
     "markdown-to-jsx": "^7.1.3",
