--- a/Paas_Ta_Front/paas/package.json
+++ b/Paas_Ta_Front/paas/package.json
@@ -14,12 +14,13 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.22.0",
+    "cdbreact": "^1.2.1",
     "express": "^4.17.1",
     "final-form": "^4.20.2",
     "markdown-to-jsx": "^7.1.3",
     "mysql": "^2.18.1",
     "react": "^17.0.2",
-    "react-device-detect": "^2.0.0",
+    "react-device-detect": "^2.0.1",
     "react-dom": "^17.0.2",
     "react-final-form": "^6.5.3",
     "react-loading": "^2.0.3",
