--- a/Paas_Ta_Front/paas/package.json
+++ b/Paas_Ta_Front/paas/package.json
@@ -15,10 +15,12 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.22.0",
     "cdbreact": "^1.2.1",
+    "classnames": "^2.3.1",
     "express": "^4.17.1",
     "final-form": "^4.20.2",
     "markdown-to-jsx": "^7.1.3",
     "mysql": "^2.18.1",
+    "open-color": "^1.9.1",
     "react": "^17.0.2",
     "react-device-detect": "^2.0.1",
     "react-dom": "^17.0.2",
@@ -58,6 +60,11 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.2.3"
+    "css-loader": "^6.4.0",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "gh-pages": "^3.2.3",
+    "node-sass": "^6.0.1",
+    "sass-loader": "^12.2.0",
+    "style-loader": "^3.3.0"
   }
 }
