--- a/Paas_Ta_Front/paas/package.json
+++ b/Paas_Ta_Front/paas/package.json
@@ -22,6 +22,7 @@
     "mysql": "^2.18.1",
     "open-color": "^1.9.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.4",
     "react-device-detect": "^2.0.1",
     "react-dom": "^17.0.2",
     "react-final-form": "^6.5.3",
