--- a/Paas_Ta_Front/paas/package.json
+++ b/Paas_Ta_Front/paas/package.json
@@ -33,6 +33,7 @@
     "react-scripts": "4.0.3",
     "react-toastify": "^8.0.3",
     "sass": "^1.42.1",
+    "todolist": "0.0.1",
     "typescript": "^4.4.3",
     "web-vitals": "^1.1.2"
   },
