--- a/Paas_Ta_Front/paas/package.json
+++ b/Paas_Ta_Front/paas/package.json
@@ -33,6 +33,7 @@
     "react-scripts": "4.0.3",
     "react-toastify": "^8.0.3",
     "sass": "^1.43.3",
+    "simple-peer": "^9.11.0",
     "todolist": "0.0.1",
     "typescript": "^4.4.4",
     "web-vitals": "^1.1.2"
@@ -62,11 +63,15 @@
     ]
   },
   "devDependencies": {
+    "@types/react": "^17.0.33",
+    "@types/react-dom": "^17.0.10",
+    "@types/simple-peer": "^9.11.3",
     "css-loader": "^6.4.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "gh-pages": "^3.2.3",
     "node-sass": "^6.0.1",
     "sass-loader": "^12.2.0",
-    "style-loader": "^3.3.1"
+    "style-loader": "^3.3.1",
+    "ts-loader": "^9.2.6"
   }
 }
