--- a/Paas_Ta_Front/paas/package.json
+++ b/Paas_Ta_Front/paas/package.json
@@ -16,12 +16,18 @@
     "axios": "^0.22.0",
     "cdbreact": "^1.2.1",
     "classnames": "^2.3.1",
+    "connected-react-router": "^6.9.1",
     "express": "^4.17.1",
     "final-form": "^4.20.4",
+    "final-form-arrays": "^3.0.2",
     "markdown-to-jsx": "^7.1.3",
     "mysql": "^2.18.1",
     "open-color": "^1.9.1",
+    "ra-core": "^3.19.0",
+    "ra-data-json-server": "^3.19.0",
+    "ra-data-simple-rest": "^3.19.0",
     "react": "^17.0.2",
+    "react-admin": "^3.19.0",
     "react-bootstrap": "^1.6.4",
     "react-device-detect": "^2.1.1",
     "react-dom": "^17.0.2",
