--- a/Paas_Ta_Front/paas/package.json
+++ b/Paas_Ta_Front/paas/package.json
@@ -17,13 +17,16 @@
     "cdbreact": "^1.2.1",
     "classnames": "^2.3.1",
     "connected-react-router": "^6.9.1",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "final-form": "^4.20.4",
     "final-form-arrays": "^3.0.2",
+    "jquery": "^3.6.0",
     "markdown-to-jsx": "^7.1.3",
     "mysql": "^2.18.1",
     "open-color": "^1.9.1",
     "ra-core": "^3.19.0",
+    "ra-data-fakerest": "^3.19.0",
     "ra-data-json-server": "^3.19.0",
     "ra-data-simple-rest": "^3.19.0",
     "react": "^17.0.2",
@@ -40,6 +43,7 @@
     "react-toastify": "^8.0.3",
     "sass": "^1.43.3",
     "simple-peer": "^9.11.0",
+    "socket.io-client": "^4.3.2",
     "todolist": "0.0.1",
     "typescript": "^4.4.4",
     "web-vitals": "^1.1.2"
