이미지 경로 바꿈

--- a/Paas_Ta_Back/src/main/resources/application.yml
+++ b/Paas_Ta_Back/src/main/resources/application.yml
@@ -35,6 +35,8 @@ server:
       tracking-modes: cookie
       timeout: 10
 
+project:
+  basedir: spring/paasta
 
 file:
-  dir: C:/Temp/gathermarket/
+  dir: C:/${project.basedir}/2021_Pasas_Ta/Paas_Ta_Front/paas/public/img/
