--- a/Paas_Ta_Front/paas/package.json
+++ b/Paas_Ta_Front/paas/package.json
@@ -13,6 +13,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "antd": "^4.16.13",
     "axios": "^0.22.0",
     "cdbreact": "^1.2.1",
     "classnames": "^2.3.1",
@@ -44,6 +45,8 @@
     "sass": "^1.43.3",
     "simple-peer": "^9.11.0",
     "socket.io-client": "^4.3.2",
+    "sockjs-client": "^1.5.2",
+    "stompjs": "^2.3.3",
     "todolist": "0.0.1",
     "typescript": "^4.4.4",
     "web-vitals": "^1.1.2"
@@ -76,6 +79,8 @@
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "@types/simple-peer": "^9.11.3",
+    "@types/sockjs-client": "^1.5.1",
+    "@types/stompjs": "^2.3.5",
     "css-loader": "^6.4.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "gh-pages": "^3.2.3",
