--- a/Paas_Ta_Back/build.gradle
+++ b/Paas_Ta_Back/build.gradle
@@ -2,7 +2,6 @@ plugins {
     id 'org.springframework.boot' version '2.5.5'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'java'
-    id "com.moowork.node" version '1.3.1'
 }
 
 group = 'passta'
@@ -25,6 +24,17 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-mail'
     implementation 'org.springframework.boot:spring-boot-starter-web'
 
+    // https://mvnrepository.com/artifact/org.mariadb.jdbc/mariadb-java-client
+    implementation 'org.mariadb.jdbc:mariadb-java-client:2.7.4'
+
+
+    // https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-antrun-plugin
+    implementation 'org.apache.maven.plugins:maven-antrun-plugin:3.0.0'
+
+
+    // https://mvnrepository.com/artifact/mysql/mysql-connector-java
+    implementation 'mysql:mysql-connector-java:8.0.26'
+
     // https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter
     implementation 'org.springframework.cloud:spring-cloud-starter'
     // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-cloud-connectors
@@ -37,10 +47,8 @@ dependencies {
 
     // https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-config
     implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-config', version: '3.0.5'
-    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-configuration-processor
-    implementation 'org.springframework.boot:spring-boot-configuration-processor:2.5.6'
     // https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-spring-service-connector
-    implementation 'org.springframework.cloud:spring-cloud-spring-service-connector:2.0.7.RELEASE'
+    implementation 'org.springframework.cloud:spring-cloud-spring-service-connector:2.0.9.RELEASE'
     // https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-core
     implementation 'org.springframework.cloud:spring-cloud-core:1.2.9.RELEASE'
     // https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-cloudfoundry-connector
