--- a/Paas_Ta_Back/src/main/resources/application-cloud.yml
+++ b/Paas_Ta_Back/src/main/resources/application-cloud.yml
@@ -9,7 +9,7 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: update
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQL8Dialect
