--- a/Paas_Ta_Front/paas/package.json
+++ b/Paas_Ta_Front/paas/package.json
@@ -22,6 +22,7 @@
     "express": "^4.17.1",
     "final-form": "^4.20.4",
     "final-form-arrays": "^3.0.2",
+    "fs": "0.0.1-security",
     "jquery": "^3.6.0",
     "markdown-to-jsx": "^7.1.3",
     "mysql": "^2.18.1",
