--- a/Paas_Ta_Back/src/main/resources/application.yml
+++ b/Paas_Ta_Back/src/main/resources/application.yml
@@ -1,4 +1,8 @@
 spring:
+  profiles:
+    include:
+      - aws
+      - credentials
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/gathermarket
