--- a/Paas_Ta_Back/src/main/resources/application-cloud.yml
+++ b/Paas_Ta_Back/src/main/resources/application-cloud.yml
@@ -1,5 +1,18 @@
 db.mysql.servicename: mysql_cli
 
+cloud:
+  aws:
+    s3:
+      bucket: springboot-paasta
+    region:
+      static: ap-northeast-2
+    stack:
+      auto: false
+    credentials:
+      access-key: AKIAQDEDZTCHLGGOORN4
+      secret-key: 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
+      instanceprofile: true
+
 spring:
   datasource:
     driver-class-name: org.mariadb.jdbc.Driver
@@ -9,7 +22,7 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQL8Dialect
@@ -24,7 +37,7 @@ spring:
 
 logging:
   level:
-    org.hibernate.SQL: debug
+    #    org.hibernate.SQL: debug
     org.hibernate.type: trace
 
 server:
@@ -32,8 +45,9 @@ server:
     session:
       tracking-modes: cookie
 
-project:
-  basedir: spring/paasta
+#project:
+#  basedir: spring/paasta
 
-file:
-  dir: C:/${project.basedir}/2021_Paas_Ta/Paas_Ta_Front/paas/public/img/
+#file:
+#  dir: C:/${project.basedir}/2021_Paas_Ta/Paas_Ta_Front/paas/public/img/
+#file.dir: https://onnuriservice1.paas-ta.org/img/
