--- a/Paas_Ta_Back/.gitignore
+++ b/Paas_Ta_Back/.gitignore
@@ -5,8 +5,8 @@ build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
-application-credentials.yml
-application-cloud.yml
+**/src/resources/application-credentials.yml
+**/src/resources/application-cloud.yml
 ### STS ###
 .apt_generated
 .classpath
